--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.jmock</groupId>
+    	<artifactId>jmock-junit4</artifactId>
+    	<version>2.5.1</version>
+    </dependency>
   </dependencies>
 </project>
